# cheep

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cheep_app.py  config  pyproject.toml  sample.env
cheep/: device.py  server.py  utils.py
